--- a/src/Makefile
+++ b/src/Makefile
@@ -44,8 +44,8 @@ ejercicio6: all
 	./simusched "../ejercicios/ejercicio 5.tsk" 1 2 10 SchedFCFS | python graphsched.py > "../ejercicios/ejercicio 6 - quantum 50.png"
 
 ejercicio7: all
-	./simusched "../schedmistery/test1.tsk" 1 1 1 SchedMistery | python graphsched.py > "../ejercicios/ejercicio 7-1.png"
-	./simusched "../schedmistery/test2.tsk" 1 1 1 SchedMistery | python graphsched.py > "../ejercicios/ejercicio 7-2.png"
+	./simusched "../schedmistery/test1.tsk" 1 1 1 SchedMistery 50 25 10 | python graphsched.py > "../ejercicios/ejercicio 7-1.png"
+	./simusched "../schedmistery/test2.tsk" 1 1 1 SchedMistery 50 25 10 | python graphsched.py > "../ejercicios/ejercicio 7-2.png"
 
 ejercicios: ejercicio1 ejercicio2 ejercicio3 ejercicio5 ejercicio7 ejercicio6
 
