EJ8: Caso Favorable

--- a/src/Makefile
+++ b/src/Makefile
@@ -46,8 +46,9 @@ ejercicio7: $(MAIN)
 	./simusched "../schedmistery/test2.tsk" 1 1 1 SchedMistery 50 25 10 | python graphsched.py > "../ejercicios/ejercicio 7-2.png"
 
 ejercicio8: $(MAIN)
-	./simusched "../ejercicios/ejercicio 8-1.tsk" 1 2 10 SchedRR2 x| python graphsched.py > "../ejercicios/ejercicio 8 - 1.png"
-	./simusched "../ejercicios/ejercicio 8-2.tsk" 1 2 10 SchedRR2 x| python graphsched.py > "../ejercicios/ejercicio 8 - 2.png
+	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8 - 1.png"
+	./simusched "../ejercicios/ejercicio 8-2.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8 - 2.png"
+	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8 - 1RR.png"
 
 ejercicios: ejercicio1 ejercicio2 ejercicio3 ejercicio5 ejercicio7 ejercicio6 ejercicio8
 
