--- a/src/Makefile
+++ b/src/Makefile
@@ -44,11 +44,16 @@ ejercicio6: $(MAIN)
 ejercicio7: $(MAIN)
 	./simusched "../schedmistery/test1.tsk" 1 1 1 SchedMistery 50 25 10 | python graphsched.py > "../ejercicios/ejercicio 7-1.png"
 	./simusched "../schedmistery/test2.tsk" 1 1 1 SchedMistery 50 25 10 | python graphsched.py > "../ejercicios/ejercicio 7-2.png"
+	./simusched "../schedmistery/test3.tsk" 1 1 1 SchedMistery 50 25 10 | python graphsched.py > "../ejercicios/ejercicio 7-3.png"
 
 ejercicio8: $(MAIN)
-	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8 - 1.png"
-	./simusched "../ejercicios/ejercicio 8-2.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8 - 2.png"
-	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8 - 1RR.png"
+	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1.png"
+	./simusched "../ejercicios/ejercicio 8-2.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-2.png"
+
+	./simusched "../ejercicios/ejercicio 5.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1b.png"
+	./simusched "../ejercicios/ejercicio 5.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1bRR.png"
+
+	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1RR.png"
 
 ejercicios: ejercicio1 ejercicio2 ejercicio3 ejercicio5 ejercicio7 ejercicio6 ejercicio8
 
