--- a/src/Makefile
+++ b/src/Makefile
@@ -48,12 +48,14 @@ ejercicio7: $(MAIN)
 
 ejercicio8: $(MAIN)
 	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1.png"
-	./simusched "../ejercicios/ejercicio 8-2.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-2.png"
+	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1RR.png"
 
 	./simusched "../ejercicios/ejercicio 5.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1b.png"
 	./simusched "../ejercicios/ejercicio 5.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1bRR.png"
 
-	./simusched "../ejercicios/ejercicio 8-1.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8-1RR.png"
+	./simusched "../ejercicios/ejercicio 8-2.tsk" 2 2 10 SchedRR 10 10| python graphsched.py > "../ejercicios/ejercicio 8-2m.png"
+	./simusched "../ejercicios/ejercicio 8-2.tsk" 2 2 10 SchedRR2 10 10| python graphsched.py > "../ejercicios/ejercicio 8-2.png"
+
 
 ejercicios: ejercicio1 ejercicio2 ejercicio3 ejercicio5 ejercicio7 ejercicio6 ejercicio8
 
